--- a/styles.css
+++ b/styles.css
@@ -159,8 +159,7 @@ footer {
 
 .projects {
     display: flex;
-    justify-content: center; /* Centers the projects horizontally */
-    align-items: center; /* Aligns items vertically */
-    gap: 30px; /* Adds space between projects */
-    flex-wrap: wrap; /* Allows wrapping on smaller screens */
+    justify-content: center;
+    gap: 10px;
+    margin-top: 1px;
 }
